palantir-java-format changes